the X's and O's are inputed and switch per click

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 	<section>
 	<h2>Tic Tac Toe</h2>
 	<table>
-		<tbody>
+		<tbody class="game-grid">
 			<tr>
-				<td class="first">hello</td>
-				<td class="first">hello</td>
-				<td class="last">hello</td>
+				<td class="first"></td>
+				<td class="first"></td>
+				<td class="last"></td>
 			</tr>
 			<tr>
-				<td class="first">second</td>
-				<td class="first">second</td>
-				<td class="last">second</td>
+				<td class="first"></td>
+				<td class="first"></td>
+				<td class="last"></td>
 			</tr>
 			<tr>
-				<td class="first bNone">third</td>
-				<td class="first bNone">third</td>
-				<td>third</td>
+				<td class="first bNone"></td>
+				<td class="first bNone"></td>
+				<td></td>
 			</tr>
 		</tbody>
 	</table>
