finished the game so it reloads after someone wins

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 			</tr>
 		</tbody>
 	</table>
-		
+		<div class="lightbox">
+			<h1></h1>
+
+		</div>
 	</section>
 	<footer>
 	<h3>A Little Tic Tac Toe</h3>
